[gd_scene load_steps=12 format=3 uid="uid://ctcecghcyenbi"]

[ext_resource type="Texture2D" uid="uid://cc6c3ygyf7611" path="res://assets/mobs/demonBoss/big_demon_idle_anim_f0.png" id="1_7pkpf"]
[ext_resource type="Script" path="res://src/actors/mobs/demon_boss.gd" id="1_yp3xw"]
[ext_resource type="Texture2D" uid="uid://bwiiagdpfets1" path="res://assets/mobs/demonBoss/big_demon_idle_anim_f1.png" id="2_kp4vp"]
[ext_resource type="Texture2D" uid="uid://i313v0vk4htp" path="res://assets/mobs/demonBoss/big_demon_idle_anim_f2.png" id="3_p05w8"]
[ext_resource type="Texture2D" uid="uid://dtlvamucrwc0c" path="res://assets/mobs/demonBoss/big_demon_idle_anim_f3.png" id="4_gbsex"]
[ext_resource type="Texture2D" uid="uid://0rlnt54welwx" path="res://assets/mobs/demonBoss/big_demon_run_anim_f0.png" id="5_gdjlg"]
[ext_resource type="Texture2D" uid="uid://pf3ch5nbohxf" path="res://assets/mobs/demonBoss/big_demon_run_anim_f1.png" id="6_a750o"]
[ext_resource type="Texture2D" uid="uid://c6kim55ipkqil" path="res://assets/mobs/demonBoss/big_demon_run_anim_f2.png" id="7_su04b"]
[ext_resource type="Texture2D" uid="uid://bq7ojf1hofwpg" path="res://assets/mobs/demonBoss/big_demon_run_anim_f3.png" id="8_ecpjd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2v7lv"]
height = 28.0

[sub_resource type="SpriteFrames" id="SpriteFrames_rqxyt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7pkpf")
}, {
"duration": 1.0,
"texture": ExtResource("2_kp4vp")
}, {
"duration": 1.0,
"texture": ExtResource("3_p05w8")
}, {
"duration": 1.0,
"texture": ExtResource("4_gbsex")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_gdjlg")
}, {
"duration": 1.0,
"texture": ExtResource("6_a750o")
}, {
"duration": 1.0,
"texture": ExtResource("7_su04b")
}, {
"duration": 1.0,
"texture": ExtResource("8_ecpjd")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="DemonBoss" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_yp3xw")

[node name="ProjectileContainer" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_2v7lv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rqxyt")
animation = &"idle"
autoplay = "idle"

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
